src/test/resources/purescript_examples/failing/1733.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownName\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Thingy')
          PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Thing')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSProperNameImpl(Qualified)
                PSASTWrapperElement(QualifiedModuleName)
                  PsiElement(proper name)('Thing')
                PsiElement(.)('.')
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('doesntExist')
                  PsiElement(whitespace)(' ')
            PSStringLiteralImpl(StringLiteral)
              PsiElement(string)('"hi"')
              PsiElement(whitespace)('\n')
